<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyAccount.AddChallengeActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/challenge_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageButton
            android:id="@+id/challenge_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_ios"
            android:background="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenge"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/challenge_product_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenge_product"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/challenge_toolbar"
        android:layout_margin="10dp"/>
    <ImageView
        android:id="@+id/challenge_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="center"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/challenge_product_textview"
        android:background="@drawable/round_grey"/>
    <TextView
        android:id="@+id/challenge_office"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/office"
        app:layout_constraintStart_toEndOf="@id/challenge_image"
        app:layout_constraintTop_toTopOf="@id/challenge_image"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/challenge_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/challenge_office"
        app:layout_constraintTop_toBottomOf="@id/challenge_office"/>
    <TextView
        android:id="@+id/challenge_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textColor="@color/theme_pink"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/challenge_office"
        app:layout_constraintTop_toBottomOf="@id/challenge_title"/>
    <TextView
        android:id="@+id/challenge_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@id/challenge_discount"
        app:layout_constraintTop_toTopOf="@id/challenge_discount"/>
    <LinearLayout
        android:id="@+id/challenge_linear"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:background="@color/light_grey"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/challenge_discount"/>
        <TextView
            android:id="@+id/challenge_video_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_register"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/challenge_linear"/>
        <Button
            android:id="@+id/challenge_video_choose_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/light_grey"
            android:drawableLeft="@drawable/ic_baseline_insert_photo_24"
            android:text="@string/choose_video"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/challenge_video_textview"/>
        <TextView
            android:id="@+id/challenge_context"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/context"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/challenge_video_choose_button"/>

        <EditText
            android:id="@+id/challenge_context_edit"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_margin="15dp"
            android:background="@drawable/white_round"
            android:gravity="top"
            android:hint="@string/product_info"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.344"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/challenge_context" />

        <TextView
            android:id="@+id/challenge_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_fee"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/challenge_context_edit"/>

        <TextView
            android:id="@+id/challenge_price2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/five_percentage"
            app:layout_constraintTop_toBottomOf="@id/challenge_context_edit"/>

        <TextView
            android:id="@+id/five_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fee"
            android:textColor="@color/theme_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/challenge_context_edit" />

        <LinearLayout
            android:id="@+id/challenge_linear2"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@color/light_grey"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/challenge_fee"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:backgroundTint="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/challenge_linear2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>