<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/include_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/kakaologo"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/include_office_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/office"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/include_product_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/challenge_product"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/include_office_textview"/>
        <TextView
            android:id="@+id/include_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            android:textColor="@color/theme_pink"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/include_product_textview"/>
        <TextView
            android:id="@+id/percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage"
            android:textColor="@color/theme_pink"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/include_percentage"
            app:layout_constraintTop_toTopOf="@id/include_percentage"/>

        <TextView
            android:id="@+id/include_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/percentage"
            app:layout_constraintTop_toBottomOf="@id/include_product_textview"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>