<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_review"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/review_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/welchs"/>
        <TextView
            android:id="@+id/review_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_context"/>
        <TextView
            android:id="@+id/review_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>
        </androidx.cardview.widget.CardView>
    </TableLayout>

</LinearLayout>