<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <VideoView
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/video_the_whole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whole"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seperate_line"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="15dp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/video_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seperate_line"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="15dp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/video_buy_together"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/together_buy"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="15dp"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="150dp">

        <ImageView
            android:id="@+id/video_category"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_tune_24"/>
        <ImageView
            android:id="@+id/video_favorite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_favorite_border_24"/>
        <TextView
            android:id="@+id/video_favorite_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/video_chat"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_chat_24"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/video_chat_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/video_kakao_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/kakaologo"/>
        <TextView
            android:id="@+id/video_kakao_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/video_review"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_filter_none_24"/>
        <TextView
            android:id="@+id/video_review_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginBottom="45dp"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/video_my_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/line_color"
            android:src="@drawable/ic_baseline_person_outline_24"
            app:layout_constraintStart_toStartOf="@+id/video_title"
            app:layout_constraintBottom_toTopOf="@+id/video_title"/>
        <TextView
            android:id="@+id/video_my_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/video_my_image"
            app:layout_constraintTop_toTopOf="@+id/video_my_image"/>
        <TextView
            android:id="@+id/video_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_my_image"/>
        <TextView
            android:id="@+id/video_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/theme_pink"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_title"/>
        <TextView
            android:id="@+id/video_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/video_percentage"
            app:layout_constraintTop_toTopOf="@+id/video_percentage"/>
        <TextView
            android:id="@+id/video_product_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_nickname_category"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/line_color"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_percentage"/>
        <TextView
            android:id="@+id/video_product_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seperate_line"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/line_color"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/video_product_category"
            app:layout_constraintTop_toBottomOf="@+id/video_percentage"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/line_color"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/video_product_line"
            app:layout_constraintTop_toBottomOf="@+id/video_percentage"/>
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@mipmap/camera"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/video_my_image"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <SeekBar
        android:id="@+id/video_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="bottom"/>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="500dp"-->
<!--        android:background="@color/white"-->
<!--        android:layout_gravity="bottom">-->
<!--        -->
<!--    </LinearLayout>-->
<!--        android:visibility="invisible"-->
</FrameLayout>